--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 :root {
-  --primary-color: slategray;
   --border-color: lightgray;
-  --hover-color: deepskyblue;
   --border-width: 0.1rem;
   --border-radius: 0.5rem;
   --font-family: sans-serif;
@@ -77,7 +75,8 @@
 }
 
 #vdp-month-name {
-  margin-inline-end: 0.3rem;
+  margin-right: 0.3rem;
+  margin-left: 0.3rem;
 }
 
 #vdp-prev-month,
@@ -116,7 +115,7 @@
   margin-bottom: 1rem;
 }
 
-#vdp-days > div {
+#vdp-days > span {
   background-color: rgba(0, 0, 0, 0.05);
   padding: 0.3rem;
   text-align: center;
@@ -125,19 +124,19 @@
   border-radius: 0.1rem;
 }
 
-#vdp-days > div.--dimmed:not(.--selected) {
+#vdp-days > span.--dimmed:not(.--selected) {
   opacity: 0.5;
 }
 
-#vdp-days > div.--today {
+#vdp-days > span.--today {
   background-color: darkgrey;
 }
 
-#vdp-days > div.--selected,
-#vdp-days > div:hover {
-  background-color: var(--hover-color);
+#vdp-days > span.--selected,
+#vdp-days > span:hover {
+  background-color: var(--highlight-color);
 }
 
-#vdp-days > div:hover {
+#vdp-days > span:hover {
   filter: grayscale(0.5);
 }
